--- a/web/static/css/store.css
+++ b/web/static/css/store.css
@@ -13,7 +13,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   height: 100vh;
   max-width: 1500px;
